--- a/templates/template-card.html
+++ b/templates/template-card.html
@@ -1,11 +1,11 @@
 <figure class="card">
-    <div class="card__emoji">🌽🌽</div>
+    <div class="card__emoji">{%IMAGE%}{%IMAGE%}</div>
     <div class="card__title-box">
-      <h2 class="card__title">l(%PRODUCTNAME%)</h2>
+      <h2 class="card__title">{%PRODUCTNAME%}</h2>
     </div>
 
     <div class="card__details">
-      <div class="card__detail-box">
+      <div class="card__detail-box {%NOT_ORGANIC%}">
         <h6 class="card__detail">2 🌽 per 📦</h6>
       </div>
 
@@ -14,7 +14,7 @@
       </div>
     </div>
 
-    <a class="card__link" href="#">
+    <a class="card__link" href="/product?id={%ID%}">
       <span>Detail <i class="emoji-right">👉</i></span>
     </a>
   </figure>
